FEAT: Colocado rotas de simulação novamente
